fix: update Rust version to 1.83 and improve Dockerfile build process feat: enhance build.rs to use GIT_HASH environment variable feat: add environment file support in docker-compose style: improve CSS styles for better readability on larger screens fix: append GIT_HASH to stylesheet link in base.html so commits pull new styles

--- a/compose.dev.yaml
+++ b/compose.dev.yaml
@@ -15,6 +15,7 @@ services:
       # - seccomp=seccomp-redlib.json
     cap_drop:
       - ALL
+    env_file: .env
     networks:
       - redlib
     healthcheck:
