--- a/Dockerfile.alpine
+++ b/Dockerfile.alpine
@@ -26,7 +26,7 @@ RUN --mount=type=cache,target=/usr/local/cargo/registry \
     --mount=type=cache,target=/usr/local/cargo/git \
     --mount=type=cache,target=/redlib/target \
     --mount=type=cache,target=/root/.cache/sccache \
-    if [ "$USE_SCCACHE" = "1" ]; then export RUSTC_WRAPPER=sccache; export CARGO_INCREMENTAL=0; else unset RUSTC_WRAPPER; export CARGO_INCREMENTAL=1; fi; \
+    if [ "$USE_SCCACHE" = "1" ]; then export RUSTC_WRAPPER=sccache; else unset RUSTC_WRAPPER; fi; \
     if [ "$CARGO_PROFILE" = "dev" ]; then \
         cargo build --locked --bin redlib; \
     else \
@@ -41,7 +41,7 @@ RUN --mount=type=cache,target=/usr/local/cargo/registry \
     --mount=type=cache,target=/usr/local/cargo/git \
     --mount=type=cache,target=/redlib/target \
     --mount=type=cache,target=/root/.cache/sccache \
-    if [ "$USE_SCCACHE" = "1" ]; then export RUSTC_WRAPPER=sccache; export CARGO_INCREMENTAL=0; else unset RUSTC_WRAPPER; export CARGO_INCREMENTAL=1; fi; \
+    if [ "$USE_SCCACHE" = "1" ]; then export RUSTC_WRAPPER=sccache; else unset RUSTC_WRAPPER; fi; \
     if [ "$CARGO_PROFILE" = "dev" ]; then \
         cargo build --locked --bin redlib; \
     else \
